# swagger/swagger.json
@@ -115,6 +115,49 @@
           ]
         }
       },
+      "/api/v1/auth/google": {
+        "post": {
+          "tags": [
+            "Auth"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [
+            {
+              "in": "body",
+              "name": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "201": {
+              "description": "Created",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        }
+      },
       "/api/v1/auth/me": {
         "get": {
           "tags": [
@@ -1141,11 +1184,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:56 AM"
+            "example": "1/25/2023, 11:43:47 PM"
           },
           "createdAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:56 AM"
+            "example": "1/25/2023, 11:43:47 PM"
           }
         }
       },
@@ -1178,11 +1221,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           },
           "createdAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           }
         }
       },
@@ -1220,11 +1263,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           },
           "createdAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           }
         }
       },
@@ -1243,11 +1286,11 @@
           },
           "startTime": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           },
           "endTime": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           },
           "status": {
             "type": "string",
@@ -1260,11 +1303,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           },
           "createdAt": {
             "type": "string",
-            "example": "1/21/2023, 11:41:57 AM"
+            "example": "1/25/2023, 11:43:48 PM"
           }
         }
       }
